<resources>
    <string name="app_name">硬件适配测试</string>
    <string name="interface_opened">已打开</string>
    <string name="interface_closed">已关闭</string>
    <string name="text_entrance">门禁接口</string>
    <string name="text_whiteled">白光补光灯</string>
    <string name="text_nfc_test">NFC测试</string>
    <string name="nfc_closed">NFC关闭</string>
    <string name="nfc_testing">NFC读取中</string>
    <string name="text_uart_test">串口测试</string>
    <string name="uart_closed">串口已关闭</string>
    <string name="uart_opened">串口已开启</string>
    <string name="uart_test_success">串口回环测试成功</string>
    <string name="uart_test_failed">串口回环测试失败</string>
    <string name="text_wiegand_test">韦根测试</string>
    <string name="wiegand_closed">韦根已关闭</string>
    <string name="wiegand_opened">韦根已开启</string>
    <string name="wiegand_test_success">韦根回环测试成功</string>
    <string name="wiegand_test_failed">韦根回环测试失败</string>
    <string name="text_scanner_test">扫码头测试</string>
    <string name="text_scanner_closed">扫码头已关闭</string>
    <string name="text_scanner_opened">扫码头已开启</string>
    <string name="text_printer_test">打印机测试</string>
    <string name="text_printer_closed">打印机未连接</string>
    <string name="text_printer_opened">打印机已连接</string>
    <string name="text_printer_done">已打印，请检查打印结果</string>
    <string name="text_brightness_test">亮度测试</string>
    <string name="brightness_test_max">亮度已调至最大</string>
    <string name="brightness_test_normal">亮度已恢复默认</string>
    <string name="text_proximity_test">距离传感测试</string>
    <string name="proximity_test_closed">已停止</string>
    <string name="proximity_test_opened">已开启</string>
    <string name="proximity_test_far">远离</string>
    <string name="proximity_test_near">接近</string>
    <string name="proximity_test_error">无距离传感</string>
    <string name="text_hide_nav">隐藏导航栏</string>
    <string name="text_show_nav">显示导航栏</string>
    <string name="text_imei">"IMEI："</string>
    <string name="text_cpu_temp">"CPU温度："</string>
    <string name="text_reboot">"重启设备"</string>
    <string name="permission_denied_title">有权限被您禁止了</string>
    <string name="permission_denied_msg">请重新启动应用并允许所有申请的权限！若无法正常开启权限，请去设置-应用中寻找此应用并开启所有权限！</string>
    <string name="text_self_update">自升级测试（静默安装）</string>
    <string name="text_version_prefix">"当前版本："</string>
</resources>
